Removed some build warnings. https://maven.apache.org/plugins/maven-checkstyle-plugin/examples/upgrading-checkstyle.html