@@ -64,10 +64,10 @@ public class MockResultSetBuilder {
             when(rs.getBigDecimal(index)).thenReturn(value != null ? new BigDecimal(value) : null);
             break;
          case Types.DOUBLE:
-            when(rs.getDouble(index)).thenReturn(value != null ? new Double(value) : null);
+            when(rs.getDouble(index)).thenReturn(value != null ? Double.valueOf(value) : null);
             break;
          case Types.FLOAT:
-            when(rs.getFloat(index)).thenReturn(value != null ? new Float(value) : null);
+            when(rs.getFloat(index)).thenReturn(value != null ? Float.valueOf(value) : null);
             break;
          case Types.INTEGER:
          case Types.TINYINT:
